objects/vlocity_cmt__VlocitySearchWidgetSetup__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__AdditionalResultFields__c</fullName>
        <label>Additional Result Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContinueSearch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Continue Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisplaySequence__c</fullName>
        <label>Display Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Filter__c</fullName>
        <label>Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InteractionCreationBundleName__c</fullName>
        <label>Interaction Creation Bundle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InteractionObjectName__c</fullName>
        <label>Interaction Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InvokeClassName__c</fullName>
        <label>Invoke Class Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberOfOptionalVerificationFields__c</fullName>
        <label>Min # of Optional Verification Fields</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OptionalVerificationFields__c</fullName>
        <label>Optional Verification Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PreviousSearchContextIdField__c</fullName>
        <label>Previous Search Context Id Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PreviousSearchWidgetName__c</fullName>
        <label>Previous Search Widget Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ReferenceObjectName__c</fullName>
        <label>Reference Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ResultFields__c</fullName>
        <label>Result Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ResultUniqueField__c</fullName>
        <label>Result Unique Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ResultVerificationFields__c</fullName>
        <label>Required Verification Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SearchFields__c</fullName>
        <label>Search Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SearchObjectName__c</fullName>
        <label>Search Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Related Party</fullName>
                </value>
                <value>
                    <fullName>Caller Identification</fullName>
                </value>
                <value>
                    <fullName>More Information Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vlocity Interaction Launcher</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__IsActive__c</columns>
        <columns>vlocity_cmt__Type__c</columns>
        <columns>vlocity_cmt__Label__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Interaction Launcher</pluralLabel>
    <recordTypes>
        <fullName>vlocity_cmt__ClassBased</fullName>
        <active>true</active>
        <label>Class Based</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__ObjectBased</fullName>
        <active>true</active>
        <label>Object Based</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>